# coolc

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  README.md
.githooks/: HOWTO.md  pre-commit
.github/workflows/: coolc-ci.yml  e2e-ci.yml  integration_tests.yml  unit-ci.yml
example/: stack.cl  test_examples.md
examples/: README.md  graph.cl  stack.cl
main/: CMakeLists.txt  main_lexer.cpp  main_parser.cpp  main_semant.cpp
main/util/: util.cpp  util.hpp
src/: CMakeLists.txt  config.hpp.in  main.cpp  token.hpp
src/ast/: CMakeLists.txt  expression.hpp  print_visitor.cpp
src/lexer/: CMakeLists.txt  lexer.cpp  lexer.hpp
src/parser/: CMakeLists.txt  expressions.hpp  parser.cpp  parser.hpp
src/semant/: CMakeLists.txt  error.hpp  inheritance_graph.cpp  inheritance_graph.hpp  scope.hpp  semant.cpp  semant.hpp
src/token/: CMakeLists.txt  token.hpp
src/util/: CMakeLists.txt  type_traits.hpp
task1/: stack.cl
test/: CMakeLists.txt  main.cl
test/e2e/: test_runner
test/e2e/lexer/: all_else_true.cl  all_else_true.out  arith.out  atoi.out  backslash.out  backslash2.out  badidentifiers.out  badkeywords.out  book_list.out  bothcomments.out  comment_in_string.out  endcomment.out  eofstring.out  escaped_chars_in_comment.cl  escaped_chars_in_comment.out  escapedeof.out  escapednull.out  escapedquote.out  escapedunprintables.out  hairyscary.out  integers2.out  invalidcharacters.out  invalidinvisible.out  io.out  keywords.out  keywords_and_specials.cl  keywords_and_specials.out  keywords_and_specials2.cl  keywords_and_specials2.out  life.out  lineno2.out  lineno3.out  longcomment.out  longstring_escapedbackslashes.out  multilinecomment.out  nestedcomment.out  new_complex.out  null_in_code.cl  null_in_code.out  null_in_string.cl  (+35 more)
test/e2e/parser/: addedlet.cl  addedlet.out  arithprecedence.cl  arithprecedence.out  assigngetstype.out  assignment.out  assignseq.out  associativity+.out  associativity-.out  associativity-times.out  associativitydiv.out  atoi.out  attrcapitalname.out  badblock.out  baddispatch1.out  baddispatch2.out  baddispatch3.out  baddispatch4.out  badexprlist.cl  badexprlist.out  badfeaturenames.out  badfeatures.cl  badfeatures.out  casemultiplebranch.out  casenoexpr.out  classbadinherits.out  classbadname.out  classmethodonearg.out  classnoname.out  classonefield.out  classtwofields.out  comparisons-assoc.out  complex.out  dispatcharglist.out  dispatchnoargs.out  dispatchonearg.out  double_unary.cl  double_unary.out  emptyassign.out  emptymethodbody.out  (+49 more)
test/e2e/semant/: anattributenamedself.out  assignment.out  assignnoconform.out  attrbadinit.out  attroverride.out  badargs1.out  badarith.cl  badarith.out  baddispatch.out  badequalitytest.out  badequalitytest2.out  badmethodcallsitself.cl  badmethodcallsitself.out  badredefineint.cl  badredefineint.out  badstaticdispatch.out  badwhilebody.out  badwhilecond.out  basic.out  basicclassestree.cl  basicclassestree.out  case_self1.cl  case_self1.out  case_self2.cl  case_self2.out  case_self3.cl  case_self3.out  caseidenticalbranch.out  cells.out  classes.out  compare.cl  compare.out  comparisons.out  cycleinmethods.cl  cycleinmethods.out  dispatch.out  dupformals.out  expressionblock.cl  expressionblock.out  forwardinherits.out  (+62 more)
test/integration/: test_lexer.sh  test_runner
test/integration/tests/: arith.out  atoi.out  backslash.out  backslash2.out  badidentifiers.out  badkeywords.out  book_list.out  bothcomments.out  comment_in_string.out  endcomment.out  eofstring.out  escaped_chars_in_comment.out  escapednull.out  escapedquote.cl  escapedquote.out  escapedunprintables.out  hairyscary.out  integers2.out  invalidcharacters.out  invalidinvisible.out  io.out  just_works.out  keywords.out  life.out  lineno2.out  lineno3.out  longcomment.out  longstring_escapedbackslashes.out  multilinecomment.out  nestedcomment.cl  nestedcomment.out  new_complex.out  null_in_code.out  null_in_string.out  null_in_string_followed_by_tokens.out  objectid.test.out  opencomment.out  operators.out  palindrome.out  pathologicalstrings.out  (+23 more)
test/unit/: lexer.cpp  semant.cpp
